Antlr/src/output/MonitorParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 /homes/rn710/workspace/MonitorPrototype/Antlr/src/Monitor.g 2011-12-08 17:39:05

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class MonitorParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "INTERACTION", "INT", "STRING", "PLUS", "MINUS", "MULT", "DIV", "FULLSTOP", "RESV", "SEND", "TYPE", "VALUE", "BRANCH", "UNORDERED", "RECLABEL", "PARALLEL", "PROTOCOL", "ASSERT", "ANNOTATION", "ID", "StringLiteral", "ASSERTION", "NUMBER", "DIGIT", "WHITESPACE", "ML_COMMENT", "LINE_COMMENT", "'import'", "'protocol'", "','", "';'", "'from'", "'as'", "'at'", "'{'", "'}'", "'('", "')'", "'role'", "'introduces'", "':'", "'to'", "'choice'", "'or'", "'repeat'", "'rec'", "'end'", "'run'", "'inline'", "'parallel'", "'and'", "'do'", "'interrupt'", "'unordered'"
    };
    public static final int RESV=12;
    public static final int ANNOTATION=22;
    public static final int ASSERTION=25;
    public static final int PARALLEL=19;
    public static final int ID=23;
    public static final int EOF=-1;
    public static final int PROTOCOL=20;
    public static final int TYPE=14;
    public static final int T__55=55;
    public static final int ML_COMMENT=29;
    public static final int T__56=56;
    public static final int INTERACTION=4;
    public static final int T__57=57;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int FULLSTOP=11;
    public static final int PLUS=7;
    public static final int SEND=13;
    public static final int DIGIT=27;
    public static final int T__50=50;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int LINE_COMMENT=30;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int RECLABEL=18;
    public static final int NUMBER=26;
    public static final int WHITESPACE=28;
    public static final int INT=5;
    public static final int MINUS=8;
    public static final int MULT=9;
    public static final int VALUE=15;
    public static final int ASSERT=21;
    public static final int UNORDERED=17;
    public static final int StringLiteral=24;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int BRANCH=16;
    public static final int DIV=10;
    public static final int STRING=6;

    // delegates
    // delegators


        public MonitorParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public MonitorParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return MonitorParser.tokenNames; }
    public String getGrammarFileName() { return "/homes/rn710/workspace/MonitorPrototype/Antlr/src/Monitor.g"; }


    public static class description_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "description"
    // /homes/rn710/workspace/MonitorPrototype/Antlr/src/Monitor.g:36:1: description : ( ( ANNOTATION )* ( importProtocolStatement | importTypeStatement ) )* ( ANNOTATION )* protocolDef -> protocolDef ;
    public final MonitorParser.description_return description() throws RecognitionException {
        MonitorParser.description_return retval = new MonitorParser.description_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token ANNOTATION1=null;
        Token ANNOTATION4=null;
        MonitorParser.importProtocolStatement_return importProtocolStatement2 = null;

        MonitorParser.importTypeStatement_return importTypeStatement3 = null;

        MonitorParser.protocolDef_return protocolDef5 = null;


        Object ANNOTATION1_tree=null;
        Object ANNOTATION4_tree=null;
        RewriteRuleTokenStream stream_ANNOTATION=new RewriteRuleTokenStream(adaptor,"token ANNOTATION");
        RewriteRuleSubtreeStream stream_importTypeStatement=new RewriteRuleSubtreeStream(adaptor,"rule importTypeStatement");
        RewriteRuleSubtreeStream stream_protocolDef=new RewriteRuleSubtreeStream(adaptor,"rule protocolDef");
        RewriteRuleSubtreeStream stream_importProtocolStatement=new RewriteRuleSubtreeStream(adaptor,"rule importProtocolStatement");
        try {
            // /homes/rn710/workspace/MonitorPrototype/Antlr/src/Monitor.g:36:12: ( ( ( ANNOTATION )* ( importProtocolStatement | importTypeStatement ) )* ( ANNOTATION )* protocolDef -> protocolDef )
            // /homes/rn710/workspace/MonitorPrototype/Antlr/src/Monitor.g:36:14: ( ( ANNOTATION )* ( importProtocolStatement | importTypeStatement ) )* ( ANNOTATION )* protocolDef
            {
            // /homes/rn710/workspace/MonitorPrototype/Antlr/src/Monitor.g:36:14: ( ( ANNOTATION )* ( importProtocolStatement | importTypeStatement ) )*
            loop3:
            do {
                int alt3=2;
                alt3 = dfa3.predict(input);
                switch (alt3) {
            	case 1 :
            	    // /homes/rn710/workspace/MonitorPrototype/Antlr/src/Monitor.g:36:16: ( ANNOTATION )* ( importProtocolStatement | importTypeStatement )
            	    {
            	    // /homes/rn710/workspace/MonitorPrototype/Antlr/src/Monitor.g:36:16: ( ANNOTATION )*
            	    loop1:
            	    do {
            	        int alt1=2;
            	        int LA1_0 = input.LA(1);

            	        if ( (LA1_0==ANNOTATION) ) {
            	            alt1=1;
            	        }


            	        switch (alt1) {
            	    	case 1 :
            	    	    // /homes/rn710/workspace/MonitorPrototype/Antlr/src/Monitor.g:36:18: ANNOTATION
            	    	    {
            	    	    ANNOTATION1=(Token)match(input,ANNOTATION,FOLLOW_ANNOTATION_in_description217); if (state.failed) return retval; 
            	    	    if ( state.backtracking==0 ) stream_ANNOTATION.add(ANNOTATION1);


            	    	    }
            	    	    break;

            	    	default :
            	    	    break loop1;
            	        }
            	    } while (true);

            	    // /homes/rn710/workspace/MonitorPrototype/Antlr/src/Monitor.g:36:32: ( importProtocolStatement | importTypeStatement )
            	    int alt2=2;
            	    int LA2_0 = input.LA(1);

            	    if ( (LA2_0==31) ) {
            	        int LA2_1 = input.LA(2);

            	        if ( (LA2_1==32) ) {
            	            alt2=1;
            	        }
            	        else if ( ((LA2_1>=ID && LA2_1<=StringLiteral)) ) {
            	            alt2=2;
            	        }
            	        else {
            	            if (state.backtracking>0) {state.failed=true; return retval;}
            	            NoViableAltException nvae =
            	                new NoViableAltException("", 2, 1, input);

            	            throw nvae;
            	        }
            	    }
            	    else {
            	        if (state.backtracking>0) {state.failed=true; return retval;}
            	        NoViableAltException nvae =
            	            new NoViableAltException("", 2, 0, input);

            	        throw nvae;
            	    }
            	    switch (alt2) {
            	        case 1 :
            	            // /homes/rn710/workspace/MonitorPrototype/Antlr/src/Monitor.g:36:34: importProtocolStatement
            	            {
            	            pushFollow(FOLLOW_importProtocolStatement_in_description224);
            	            importProtocolStatement2=importProtocolStatement();

            	            state._fsp--;
            	            if (state.failed) return retval;
            	            if ( state.backtracking==0 ) stream_importProtocolStatement.add(importProtocolStatement2.getTree());

            	            }
            	            break;
            	        case 2 :
            	            // /homes/rn710/workspace/MonitorPrototype/Antlr/src/Monitor.g:36:60: importTypeStatement
            	            {
            	            pushFollow(FOLLOW_importTypeStatement_in_description228);
            	            importTypeStatement3=importTypeStatement();

            	            state._fsp--;
            	            if (state.failed) return retval;
            	            if ( state.backtracking==0 ) stream_importTypeStatement.add(importTypeStatement3.getTree());

            	            }
            	            break;

            	    }


            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);

            // /homes/rn710/workspace/MonitorPrototype/Antlr/src/Monitor.g:36:85: ( ANNOTATION )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==ANNOTATION) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // /homes/rn710/workspace/MonitorPrototype/Antlr/src/Monitor.g:36:87: ANNOTATION
            	    {
            	    ANNOTATION4=(Token)match(input,ANNOTATION,FOLLOW_ANNOTATION_in_description237); if (state.failed) return retval; 
            	    if ( state.backtracking==0 ) stream_ANNOTATION.add(ANNOTATION4);


            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);

            pushFollow(FOLLOW_protocolDef_in_description242);
            protocolDef5=protocolDef();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_protocolDef.add(protocolDef5.getTree());


            // AST REWRITE
            // elements: protocolDef
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 36:113: -> protocolDef
            {
                adaptor.addChild(root_0, stream_protocolDef.nextTree());

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "description"

    public static class importProtocolStatement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "importProtocolStatement"
    // /homes/rn710/workspace/MonitorPrototype/Antlr/src/Monitor.g:38:1: importProtocolStatement : 'import' 'protocol' importProtocolDef ( ',' importProtocolDef )* ';' ;
    public final MonitorParser.importProtocolStatement_return importProtocolStatement() throws RecognitionException {
        MonitorParser.importProtocolStatement_return retval = new MonitorParser.importProtocolStatement_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal6=null;
        Token string_literal7=null;
        Token char_literal9=null;
        Token char_literal11=null;
        MonitorParser.importProtocolDef_return importProtocolDef8 = null;

        MonitorParser.importProtocolDef_return importProtocolDef10 = null;


        Object string_literal6_tree=null;
        Object string_literal7_tree=null;
        Object char_literal9_tree=null;
        Object char_literal11_tree=null;

        try {
            // /homes/rn710/workspace/MonitorPrototype/Antlr/src/Monitor.g:38:24: ( 'import' 'protocol' importProtocolDef ( ',' importProtocolDef )* ';' )
            // /homes/rn710/workspace/MonitorPrototype/Antlr/src/Monitor.g:38:26: 'import' 'protocol' importProtocolDef ( ',' importProtocolDef )* ';'
            {
            root_0 = (Object)adaptor.nil();

            string_literal6=(Token)match(input,31,FOLLOW_31_in_importProtocolStatement253); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            string_literal6_tree = (Object)adaptor.create(string_literal6);
            adaptor.addChild(root_0, string_literal6_tree);
            }
            string_literal7=(Token)match(input,32,FOLLOW_32_in_importProtocolStatement255); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            string_literal7_tree = (Object)adaptor.create(string_literal7);
            adaptor.addChild(root_0, string_literal7_tree);
            }
            pushFollow(FOLLOW_importProtocolDef_in_importProtocolStatement257);
            importProtocolDef8=importProtocolDef();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, importProtocolDef8.getTree());
            // /homes/rn710/workspace/MonitorPrototype/Antlr/src/Monitor.g:38:64: ( ',' importProtocolDef )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==33) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // /homes/rn710/workspace/MonitorPrototype/Antlr/src/Monitor.g:38:66: ',' importProtocolDef
            	    {
            	    char_literal9=(Token)match(input,33,FOLLOW_33_in_importProtocolStatement261); if (state.failed) return retval;
            	    pushFollow(FOLLOW_importProtocolDef_in_importProtocolStatement264);
            	    importProtocolDef10=importProtocolDef();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, importProtocolDef10.getTree());

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);

            char_literal11=(Token)match(input,34,FOLLOW_34_in_importProtocolStatement269); if (state.failed) return retval;

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "importProtocolStatement"

    public static class importProtocolDef_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "importProtocolDef"
    // /homes/rn710/workspace/MonitorPrototype/Antlr/src/Monitor.g:40:1: importProtocolDef : ID 'from' StringLiteral ;
    public final MonitorParser.importProtocolDef_return importProtocolDef() throws RecognitionException {
        MonitorParser.importProtocolDef_return retval = new MonitorParser.importProtocolDef_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token ID12=null;
        Token string_literal13=null;
        Token StringLiteral14=null;

        Object ID12_tree=null;
        Object string_literal13_tree=null;
        Object StringLiteral14_tree=null;

        try {
            // /homes/rn710/workspace/MonitorPrototype/Antlr/src/Monitor.g:40:18: ( ID 'from' StringLiteral )
            // /homes/rn710/workspace/MonitorPrototype/Antlr/src/Monitor.g:40:20: ID 'from' StringLiteral
            {
            root_0 = (Object)adaptor.nil();

            ID12=(Token)match(input,ID,FOLLOW_ID_in_importProtocolDef278); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            ID12_tree = (Object)adaptor.create(ID12);
            adaptor.addChild(root_0, ID12_tree);
            }
            string_literal13=(Token)match(input,35,FOLLOW_35_in_importProtocolDef280); if (state.failed) return retval;
            StringLiteral14=(Token)match(input,StringLiteral,FOLLOW_StringLiteral_in_importProtocolDef283); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            StringLiteral14_tree = (Object)adaptor.create(StringLiteral14);
            adaptor.addChild(root_0, StringLiteral14_tree);
            }

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "importProtocolDef"

    public static class importTypeStatement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "importTypeStatement"
    // /homes/rn710/workspace/MonitorPrototype/Antlr/src/Monitor.g:42:1: importTypeStatement : 'import' ( simpleName )? importTypeDef ( ',' importTypeDef )* ( 'from' StringLiteral )? ';' ;
    public final MonitorParser.importTypeStatement_return importTypeStatement() throws RecognitionException {
        MonitorParser.importTypeStatement_return retval = new MonitorParser.importTypeStatement_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal15=null;
        Token char_literal18=null;
        Token string_literal20=null;
        Token StringLiteral21=null;
        Token char_literal22=null;
        MonitorParser.simpleName_return simpleName16 = null;

        MonitorParser.importTypeDef_return importTypeDef17 = null;

        MonitorParser.importTypeDef_return importTypeDef19 = null;


        Object string_literal15_tree=null;
        Object char_literal18_tree=null;
        Object string_literal20_tree=null;
        Object StringLiteral21_tree=null;
        Object char_literal22_tree=null;

        try {
            // /homes/rn710/workspace/MonitorPrototype/Antlr/src/Monitor.g:42:20: ( 'import' ( simpleName )? importTypeDef ( ',' importTypeDef )* ( 'from' StringLiteral )? ';' )
            // /homes/rn710/workspace/MonitorPrototype/Antlr/src/Monitor.g:42:22: 'import' ( simpleName )? importTypeDef ( ',' importTypeDef )* ( 'from' StringLiteral )? ';'
            {
            root_0 = (Object)adaptor.nil();

            string_literal15=(Token)match(input,31,FOLLOW_31_in_importTypeStatement296); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            string_literal15_tree = (Object)adaptor.create(string_literal15);
            adaptor.addChild(root_0, string_literal15_tree);
            }
            // /homes/rn710/workspace/MonitorPrototype/Antlr/src/Monitor.g:42:31: ( simpleName )?
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==ID) ) {
                int LA6_1 = input.LA(2);

                if ( ((LA6_1>=ID && LA6_1<=StringLiteral)) ) {
                    alt6=1;
                }
            }
            switch (alt6) {
                case 1 :
                    // /homes/rn710/workspace/MonitorPrototype/Antlr/src/Monitor.g:42:33: simpleName
                    {
                    pushFollow(FOLLOW_simpleName_in_importTypeStatement300);
                    simpleName16=simpleName();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, simpleName16.getTree());

                    }
                    break;

            }

            pushFollow(FOLLOW_importTypeDef_in_importTypeStatement305);
            importTypeDef17=importTypeDef();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, importTypeDef17.getTree());
            // /homes/rn710/workspace/MonitorPrototype/Antlr/src/Monitor.g:42:61: ( ',' importTypeDef )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==33) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // /homes/rn710/workspace/MonitorPrototype/Antlr/src/Monitor.g:42:63: ',' importTypeDef
            	    {
            	    char_literal18=(Token)match(input,33,FOLLOW_33_in_importTypeStatement309); if (state.failed) return retval;
            	    pushFollow(FOLLOW_importTypeDef_in_importTypeStatement312);
            	    importTypeDef19=importTypeDef();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, importTypeDef19.getTree());

            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);

            // /homes/rn710/workspace/MonitorPrototype/Antlr/src/Monitor.g:42:85: ( 'from' StringLiteral )?
            int alt8=2;
            int LA8_0 = input.LA(1);

            if ( (LA8_0==35) ) {
                alt8=1;
            }
            switch (alt8) {
                case 1 :
                    // /homes/rn710/workspace/MonitorPrototype/Antlr/src/Monitor.g:42:87: 'from' StringLiteral
                    {
                    string_literal20=(Token)match(input,35,FOLLOW_35_in_importTypeStatement319); if (state.failed) return retval;
                    StringLiteral21=(Token)match(input,StringLiteral,FOLLOW_StringLiteral_in_importTypeStatement322); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    StringLiteral21_tree = (Object)adaptor.create(StringLiteral21);
                    adaptor.addChild(root_0, StringLiteral21_tree);
                    }

                    }
                    break;

            }

            char_literal22=(Token)match(input,34,FOLLOW_34_in_importTypeStatement327); if (state.failed) return retval;

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "importTypeStatement"

    public static class importTypeDef_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "importTypeDef"
    // /homes/rn710/workspace/MonitorPrototype/Antlr/src/Monitor.g:44:1: importTypeDef : ( dataTypeDef 'as' )? ID ;
    public final MonitorParser.importTypeDef_return importTypeDef() throws RecognitionException {
        MonitorParser.importTypeDef_return retval = new MonitorParser.importTypeDef_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal24=null;
        Token ID25=null;
        MonitorParser.dataTypeDef_return dataTypeDef23 = null;


        Object string_literal24_tree=null;
        Object ID25_tree=null;

        try {
            // /homes/rn710/workspace/MonitorPrototype/Antlr/src/Monitor.g:44:14: ( ( dataTypeDef 'as' )? ID )
            // /homes/rn710/workspace/MonitorPrototype/Antlr/src/Monitor.g:44:16: ( dataTypeDef 'as' )? ID
            {
            root_0 = (Object)adaptor.nil();

            // /homes/rn710/workspace/MonitorPrototype/Antlr/src/Monitor.g:44:16: ( dataTypeDef 'as' )?
            int alt9=2;
            int LA9_0 = input.LA(1);

            if ( (LA9_0==StringLiteral) ) {
                alt9=1;
            }
            switch (alt9) {
                case 1 :
                    // /homes/rn710/workspace/MonitorPrototype/Antlr/src/Monitor.g:44:18: dataTypeDef 'as'
                    {
                    pushFollow(FOLLOW_dataTypeDef_in_importTypeDef338);
                    dataTypeDef23=dataTypeDef();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, dataTypeDef23.getTree());
                    string_literal24=(Token)match(input,36,FOLLOW_36_in_importTypeDef340); if (state.failed) return retval;

                    }
                    break;

            }

            ID25=(Token)match(input,ID,FOLLOW_ID_in_importTypeDef346); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            ID25_tree = (Object)adaptor.create(ID25);
            adaptor.addChild(root_0, ID25_tree);
            }

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "importTypeDef"

    public static class dataTypeDef_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "dataTypeDef"
    // /homes/rn710/workspace/MonitorPrototype/Antlr/src/Monitor.g:46:1: dataTypeDef : StringLiteral ;
    public final MonitorParser.dataTypeDef_return dataTypeDef() throws RecognitionException {
        MonitorParser.dataTypeDef_return retval = new MonitorParser.dataTypeDef_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token StringLiteral26=null;

        Object StringLiteral26_tree=null;

        try {
            // /homes/rn710/workspace/MonitorPrototype/Antlr/src/Monitor.g:46:12: ( StringLiteral )
            // /homes/rn710/workspace/MonitorPrototype/Antlr/src/Monitor.g:46:14: StringLiteral
            {
            root_0 = (Object)adaptor.nil();

            StringLiteral26=(Token)match(input,StringLiteral,FOLLOW_StringLiteral_in_dataTypeDef354); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            StringLiteral26_tree = (Object)adaptor.create(StringLiteral26);
            adaptor.addChild(root_0, StringLiteral26_tree);
            }

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "dataTypeDef"

    public static class simpleName_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "simpleName"
    // /homes/rn710/workspace/MonitorPrototype/Antlr/src/Monitor.g:48:1: simpleName : ID ;
    public final MonitorParser.simpleName_return simpleName() throws RecognitionException {
        MonitorParser.simpleName_return retval = new MonitorParser.simpleName_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token ID27=null;

        Object ID27_tree=null;

        try {
            // /homes/rn710/workspace/MonitorPrototype/Antlr/src/Monitor.g:48:11: ( ID )
            // /homes/rn710/workspace/MonitorPrototype/Antlr/src/Monitor.g:48:13: ID
            {
            root_0 = (Object)adaptor.nil();

            ID27=(Token)match(input,ID,FOLLOW_ID_in_simpleName362); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            ID27_tree = (Object)adaptor.create(ID27);
            adaptor.addChild(root_0, ID27_tree);
            }

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {
